--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   firebase_storage: ^12.4.2
   image_picker: ^1.1.2
   lazy_load_scrollview: ^1.3.0
+  flutter_dotenv: ^5.2.1
 
 # State Management
 
